<resources>
    <string name="app_name">The Always Evil Game</string>
    <string name="location">Location</string>
    <string name="inventory">Inventory</string>
    <string name="location_tavern">Tavern</string>
    <string name="location_clearing">Clearing</string>
    <string name="location_carpenter">Carpenter</string>
    <string name="location_townHall">Town Hall</string>
    <string name="location_blacksmith">Blacksmith</string>
    <string name="location_marketplace">Market Place</string>
    <string name="location_travelingSalesman">Traveling Salesman</string>
    <string name="location_villageGate">Village Gate</string>
    <string name="location_countryside">Countryside</string>
    <string name="item_burningCharcoal">Burning Charcoal</string>
    <string name="item_bucket">Bucket</string>
    <string name="item_ratPoisonAndCoke">Rat Poison and Coke</string>
    <string name="item_unlitTorch">Unlit Torch</string>
    <string name="item_litTorch">Lit Torch</string>
    <string name="item_goldenCoin">Golden Coin</string>
    <string name="item_sword">Sword</string>
    <string name="btn_newGame">New Game</string>
    <string name="btn_map">Map</string>
    <string name="btn_about">About</string>
    <string name="choose_start_point">Choose where you want to start your adventure</string>
    <string name="beta_label">UI coming soon \n...maybe...</string>
    <string name="start_wo_tutorial_label">start without tutorial</string>
    <string name="start_w_tutorial_label">start with tutorial</string>
    <string name="btn_startGame">Start Game</string>
    <string name="switch_auto_listen">Auto Listen</string>
</resources>
