<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.MenuActivity"
    android:background="@color/colorLogoBackground">

    <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/menu_text_title_size"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_newGame"
        android:id="@+id/btn_startGame"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/menu_text_size_huge" />


    <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_about"
        android:id="@+id/btn_about"
        android:backgroundTint="@color/colorButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:textSize="@dimen/menu_text_size_small"  />

</RelativeLayout>
