<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorLogoBackground"
        tools:context="de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.GameActivity">

        <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/menu_text_title_size"
            android:textColor="@android:color/black"/>

        <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location"
            android:id="@+id/location_view"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="15dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/location_icon_size">
            <include layout="@layout/card_view_location"/>
        </RelativeLayout>

        <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/inventory"
            android:id="@+id/textView2"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_icon_size">
                    <include layout="@layout/card_view_item"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_icon_size">
                    <include layout="@layout/card_view_item"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_icon_size">
                    <include layout="@layout/card_view_item"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_icon_size">
                    <include layout="@layout/card_view_item"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp" />


        <ImageButton
            android:id="@+id/speakButton"
            android:background="@drawable/mic_background_inactive"
            android:layout_width="@dimen/mic_size"
            android:layout_height="@dimen/mic_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:src="@android:drawable/ic_btn_speak_now"
            android:text="ToggleButton" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_auto_listen"
            android:id="@+id/sw_auto_listen"
            android:layout_gravity="center_horizontal"
            android:checked="true" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/colorInactiveOverlay">
    <de.hdm_stuttgart.hpxl_nupo.thealwaysevilgame.ui.ComicTextFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/beta_label"
        android:id="@+id/betaTextView"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/menu_text_size_huge"
        android:rotation="-45"
        android:textColor="@android:color/white"/>
    </RelativeLayout>
</FrameLayout>